# uboat

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/uboat/: uboat.h
src/: uboat.cpp
tests/: CMakeLists.txt  common.h  lists_tests.cpp  system_tests.cpp  test_annotation.cpp  test_browsing.cpp  test_lists.cpp  test_playlists.cpp  test_searching.cpp  test_system.cpp
