macro(add_uboat_test _TEST_NAME)
  add_executable(test_${_TEST_NAME} test_${_TEST_NAME}.cpp)
  target_link_libraries(test_${_TEST_NAME} PRIVATE ${CMAKE_PROJECT_NAME})
  add_test(NAME test_${_TEST_NAME} COMMAND test_${_TEST_NAME})
endmacro()

add_uboat_test(system)
add_uboat_test(browsing)
add_uboat_test(lists)
add_uboat_test(searching)
